syntax="proto3";

option go_package = "/pb";

service BiddingService {
  rpc AddPosition (AddPositionRequest) returns (AddPositionResponse) {}
}

message AddPositionRequest {
  double initial_price = 1;
}

message AddPositionResponse {
  int64 position_id = 1;
}